--- a/Day-6(Box Model)/index1.html
+++ b/Day-6(Box Model)/index1.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inline/Block</title>
+    <link rel="stylesheet" href="style1.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- <h2>Heading 1</h2>
+    <h2>Heading 2</h2>
+    <span>Span 1</span>
+    <span>Span 2</span> -->
+    <div></div>
+    <div></div>
+    <div id="third"></div>
+  </body>
 </html>
